# SolanaCore

./: .env.example  CONTRIBUTING.md  README.md  package-lock.json  package.json
.github/workflows/: api.yml  codeql.yml
api/: .env  .env.example  README.md  docker-compose.yml  main.py  requirements.txt
api/src/: ai.py  solana.py  utils.py
api/src/crhai/: fraud_detection.py
client/ar3d/: index.js
client/pages/: _app.tsx  ar.tsx  index.tsx
programs/bridge/: Anchor.toml  Cargo.toml  README.md
programs/bridge/src/: lib.rs
programs/bridge/tests/: bridge.ts
programs/esate/src/: lib.rs
programs/governance/: Anchor.toml  Cargo.toml
programs/governance/src/: lib.rs
programs/iaolp/src/: lib.rs
programs/pi-coin/src/: lib.rs
programs/qecl/: Cargo.toml
programs/qecl/src/: lib.rs
tests/: pi-coin.ts
